FLT-3 : cleanup and refactoring